web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-func-expr-param-lhs-pat/module-parent-async-current-not/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,34)
2|    const child = function name({await}) {
 |                                ^
[SyntaxError]: Can not use 'await' as identifier inside an async function. (5,41)
5|    const child2 = function name({name: await}) {
 |                                       ^
